feature: get data from firebase backend

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+################# List for security #################
+src/App.config.ts
+
+
 ################# List from common sense #################
 .idea
 
