--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "boodschappenlijstje",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
@@ -11,6 +11,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "firebase": "^8.2.1",
+    "firebaseui": "^4.8.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
